[tool.poetry]
name = "example-websocket"
version = "0.1.0"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "example_websocket"}]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^11.0.3"


[tool.poetry.group.dev.dependencies]
watchdog = {extras = ["watchmedo"], version = "^3.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
